--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "react": "^16.7.0",
+    "@material-ui/core": "^4.3.0",
+    "react": "^16.8.0",
     "react-async-component": "^2.0.0",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.6.3",
     "react-router-dom": "^4.3.1"
@@ -34,7 +35,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
-    "webpack": "^4.17.0",
+    "webpack": "^4.39.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
